# find-your-next-adventure

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  WIKI_ARCHITECTURE.md  WIKI_EXAMPLES.md  WIKI_HOME.md  WIKI_INSTALLATION.md  example.py  main.py  parse_adventure_guide.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  sample_concise_log.txt  sample_hierarchical_log.txt  setup.py  test_extended_links.py  test_single_log.py
archive/: pdf_to_json_parser.py
docs/: _Sidebar.md
find_your_next_adventure/: __init__.py  cli.py
find_your_next_adventure/models/: __init__.py  chapter.py  coordinates.py  destination.py
find_your_next_adventure/parsers/: __init__.py  adventure_guide_parser.py
find_your_next_adventure/utils/: __init__.py  coordinates.py  file_io.py  logging_config.py  maps.py  ollama_generator.py
scripts/: test_structure.py  validate_maps_links.py
tests/: __init__.py  conftest.py  test_models.py  test_parser.py
